syntax = "proto3";

package org.hiero.otter.fixtures.turtle.app;

// SPDX-License-Identifier: Apache-2.0
option java_package = "org.hiero.otter.fixtures.turtle.app";
option java_multiple_files = true;

import "platform/event/state_signature_transaction.proto";
import "services/timestamp.proto";

message TurtleTransaction {

  oneof data {
    EmptyTransaction emptyTransaction = 100;
    TurtleFreezeTransaction freezeTransaction = 101;
    com.hedera.hapi.platform.event.StateSignatureTransaction stateSignatureTransaction = 102;
  }
}

message EmptyTransaction {
  uint64 nonce = 1;
}

message TurtleFreezeTransaction {
  proto.Timestamp freezeTime = 1;
}

